hago un commit porque hay altos truenos y si se me quema la pc con lo que modifique me corto la pija